# kinevision

./: .gitignore  Dockerfile  MAGIC_LINK_SETUP.md  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  requirements.txt  start.sh  vercel.json
api/: index.py
backend/: .env.example  Dockerfile  analysis.py  api.py  main.py  models.py  pyproject.toml  verify_dashboard_api.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AssessmentLayout.jsx  Layout.jsx  MessagingComponent.jsx  PoseTracker.jsx  RequireAuth.jsx  RoleSwitcher.jsx  ThemeSwitcher.jsx  TrainerLeaderboard.jsx  VoiceControl.jsx
frontend/src/contexts/: ThemeContext.jsx
frontend/src/data/: exercises.js
frontend/src/logic/: AICoach.js
frontend/src/pages/: AssessmentIntro.jsx  AssessmentResults.jsx  AssessmentSession.jsx  AuthCallback.jsx  ExerciseBriefing.jsx  Landing.jsx  MarketplacePage.jsx  PatientDashboard.jsx  ProfessionalDashboard.jsx  SessionView.jsx  TrainerDashboard.jsx
project/chats/: 5_chat.md
project/implementation_plans/: 1_implementation_plan.md  2_implementation_plan.md  3_implementation_plan.md  4_implementation_plan.md  5_implementation_plan.md
project/task_lists/: 1_task.md  2_task.md  3_task.md  4_task.md  5_task.md
